--- a/app/src/main/res/layout/fragment_trackers_map.xml
+++ b/app/src/main/res/layout/fragment_trackers_map.xml
@@ -350,6 +350,7 @@
                             tools:text="@string/joe_tools" />
 
                         <LinearLayout
+                            android:visibility="@{viewModel.visibilityBattery}"
                             android:layout_width="wrap_content"
                             android:layout_height="20dp"
                             android:layout_gravity="bottom"
