--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -55,7 +55,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="textPersonName"
                             android:maxLines="1"
-                            app:twoWayText="@{viewModel.profile.username}" />
+                            android:text="@={viewModel.username}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -71,7 +71,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="textPersonName"
                             android:maxLines="1"
-                            app:twoWayText="@{viewModel.profile.displayname}" />
+                            android:text="@={viewModel.fullName}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -87,7 +87,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="textPostalAddress"
                             android:maxLines="1"
-                            app:twoWayText="@{viewModel.profile.address}" />
+                            android:text="@={viewModel.address}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -103,7 +103,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="text"
                             android:maxLines="1"
-                            app:twoWayText="@{viewModel.profile.zipCode}" />
+                            android:text="@={viewModel.zipCode}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -119,7 +119,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="textPostalAddress"
                             android:maxLines="1"
-                            app:twoWayText="@{viewModel.profile.city}" />
+                            android:text="@={viewModel.city}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -135,7 +135,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="textPostalAddress"
                             android:maxLines="1"
-                            app:twoWayText="@{viewModel.profile.country}" />
+                            android:text="@={viewModel.country}" />
                     </android.support.design.widget.TextInputLayout>
 
                     <LinearLayout
@@ -162,7 +162,7 @@
                                     android:maxLength="4"
                                     android:maxLines="1"
                                     android:paddingLeft="16dp"
-                                    app:twoWayText="@{viewModel.profile.phoneCode}" />
+                                    android:text="@={viewModel.phoneCode}" />
                             </android.support.design.widget.TextInputLayout>
 
                             <TextView
@@ -193,7 +193,7 @@
                                 android:inputType="number"
                                 android:maxLength="10"
                                 android:maxLines="1"
-                                app:twoWayText="@{viewModel.profile.phoneNumber}" />
+                                android:text="@={viewModel.phoneNumber}" />
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
 
@@ -211,7 +211,7 @@
                             android:imeOptions="actionNext"
                             android:inputType="textEmailAddress"
                             android:maxLines="1"
-                            app:twoWayText="@{viewModel.profile.email}" />
+                            android:text="@={viewModel.email}" />
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
