[chg] textView and textView with checkBox was added

--- a/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
+++ b/app/src/main/res/layout/fragment_add_tracker_with_pin_code.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -34,7 +35,10 @@
                     android:layout_margin="16dp"
                     android:background="@drawable/form_bg"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="4dp">
 
                     <no.appsonite.gpsping.widget.CustomFontTextView
                         style="@style/AppTheme.widget.FormTitle"
@@ -77,6 +81,45 @@
                             app:twoWayText="@{viewModel.trackerLast4DigitsOfNumber}" />
                     </android.support.design.widget.TextInputLayout>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:text="@string/addTrackerInfo"
+                        android:textSize="13sp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="56dp"
+                            android:orientation="vertical">
+
+                            <CheckBox
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:checked="@={viewModel.permission}" />
+
+                            <ImageView
+                                android:layout_width="24dp"
+                                android:layout_height="24dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/ic_error_add_tracker"
+                                android:visibility="@{viewModel.visibilityErrorPermission}"
+                                tools:visibility="gone" />
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="4dp"
+                            android:text="@string/addTrackerInfoCheckBox" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
