--- a/app/src/main/res/drawable/button_gray_new.xml
+++ b/app/src/main/res/drawable/button_gray_new.xml
@@ -4,6 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#80BBBBBE" />
             <size android:width="1dp" android:height="1dp" />
+            <stroke android:width="2dp" android:color="#80e6e6e6" />
             <corners android:radius="8dp" />
         </shape>
     </item>
@@ -11,6 +12,7 @@
         <shape android:shape="rectangle">
             <solid android:color="#BBBBBE" />
             <size android:width="1dp" android:height="1dp" />
+            <stroke android:width="2dp" android:color="#e2e2e2" />
             <corners android:radius="8dp" />
         </shape>
     </item>
