--- a/app/src/main/res/layout/item_tracker.xml
+++ b/app/src/main/res/layout/item_tracker.xml
@@ -47,50 +47,20 @@
             android:orientation="horizontal"
             android:tag="@{item}">
 
-            <!--<ImageView-->
-            <!--android:layout_width="@dimen/trackerIconSmall"-->
-            <!--android:layout_height="@dimen/trackerIconSmall"-->
-            <!--android:layout_gravity="center_vertical"-->
-            <!--android:layout_marginLeft="16dp"-->
-            <!--app:imageRes="@{BindingHelper.getTrackerImage(item.type)}" />-->
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="@dimen/trackerIconSmall"
                 android:layout_height="@dimen/trackerIconSmall"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="16dp"
                 app:civ_border_color="@color/colorPrimary"
-                app:imageFromAmazon="@{item.picUrl}"
-                app:civ_border_width="2dp" />
+                app:civ_border_width="2dp"
+                app:imageFromAmazon="@{item.picUrl}" />
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/trackerItemHeight"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp">
-
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="10dp"-->
-                <!--android:singleLine="true"-->
-                <!--android:text="@{item.trackerName}"-->
-                <!--android:textColor="@color/mainTextColor"-->
-                <!--android:textSize="24sp" />-->
-
-                <!--<TextView-->
-                <!--style="@style/AppTheme.widget.FormFieldLabel"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="40sp"-->
-                <!--android:text="@{@string/trackerNumberN(item.trackerNumber.get())}" />-->
-
-                <!--<TextView-->
-                <!--style="@style/AppTheme.widget.FormFieldLabel"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="54sp"-->
-                <!--android:text="@{@string/trackerImeiN(item.imeiNumber.get())}" />-->
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -100,18 +70,6 @@
                     android:textColor="@color/mainTextColor"
                     android:textSize="16sp"
                     tools:text="Bailey" />
-
-                <!--<ImageView-->
-                <!--android:id="@+id/enableTracker"-->
-                <!--android:background="?attr/selectableItemBackground"-->
-                <!--android:layout_width="48dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_gravity="end"-->
-                <!--android:gravity="center"-->
-                <!--android:onClick="@{onClickListener}"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@{item.isEnabled?@drawable/checkbox_checked:@drawable/checkbox_unchecked}"-->
-                <!--android:tag="@{item}" />-->
 
                 <View
                     android:layout_width="match_parent"
