[chg] AddTracker was updated.

--- a/app/src/main/res/layout/dialog_new_tracker_help.xml
+++ b/app/src/main/res/layout/dialog_new_tracker_help.xml
@@ -14,10 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="#fff"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="16dp"
         android:orientation="vertical"
+        android:paddingBottom="16dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:soundEffectsEnabled="false">
 
         <ImageView
@@ -25,55 +25,71 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_gravity="end"
-            android:clickable="true"
             android:background="?attr/selectableItemBackground"
             android:scaleType="centerInside"
             android:src="@drawable/ic_action_navigation_close" />
 
-        <TextView
-            android:layout_marginTop="-12dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/trackerNumber"
-            android:textColor="@color/mainTextColor"
-            android:textSize="22sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@string/canBeFoundInside"
-            android:textSize="16sp" />
-
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/photo_phone" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/trackerNumber"
+                android:textColor="@color/colorAccent"
+                android:textSize="22sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="@string/imeiNumber"
-            android:textColor="@color/mainTextColor"
-            android:textSize="22sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/canBeFoundInside"
+                android:textColor="@color/colorUnchecked"
+                android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="@string/isPlacedOnTheBack"
-            android:textSize="16sp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/photo_phone" />
 
-        <ImageView
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/photo_imei" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/imeiNumber"
+                android:textColor="@color/colorAccent"
+                android:textSize="22sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/isPlacedOnTheBack"
+                android:textColor="@color/colorUnchecked"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/photo_imei" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
