--- a/app/src/main/res/layout/dialog_fragment_remove_poi.xml
+++ b/app/src/main/res/layout/dialog_fragment_remove_poi.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="no.appsonite.gpsping.viewmodel.PoiFragmentViewModel" />
+            type="no.appsonite.gpsping.viewmodel.RemovePoiFragmentViewModel" />
     </data>
 
     <LinearLayout
