--- a/app/src/main/res/layout/fragment_edit_tracker.xml
+++ b/app/src/main/res/layout/fragment_edit_tracker.xml
@@ -436,6 +436,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/trackerHistoryBlock"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
